--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="HangSmart - Plan activities with friends using AI-powered suggestions"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
